[feat,style]: apply v1-based rewrite and use Google Java formatter