@@ -1,26 +1,61 @@
 plugins {
-    id "java"
-}
-
-if (JavaVersion.current() < JavaVersion.VERSION_17) {
-    throw new GradleException("Top.gg's Java SDK requires Java 17 or later. Java ${JavaVersion.current()} is not supported.")
+  id 'java-library'
+  id 'maven-publish'
 }
 
 group = 'org.discordbots'
+version = '3.0.0'
+description = 'The community-maintained Java library for Top.gg.'
+
+if (JavaVersion.current() < JavaVersion.VERSION_17) {
+  throw new GradleException('Top.gg\'s Java SDK requires Java 17 or later. Java ${JavaVersion.current()} is not supported.')
+}
 
 repositories {
-    mavenCentral()
+  mavenCentral()
+}
+
+configurations {
+  googleJavaFormat
 }
 
 dependencies {
-    //Logger
-    implementation "org.slf4j:slf4j-api:2.0.17"
+  //Logger
+  implementation 'org.slf4j:slf4j-api:2.0.17'
 
-    implementation "org.json:json:20251224"
-    implementation "com.squareup.okhttp3:okhttp:5.3.2"
-    implementation "com.google.code.gson:gson:2.13.2"
-    implementation "com.fatboyindustrial.gson-javatime-serialisers:gson-javatime-serialisers:1.1.2"
-    implementation "org.springframework.boot:spring-boot-starter-web:4.0.2"
-    implementation "jakarta.servlet:jakarta.servlet-api:6.1.0"
-    implementation "jakarta.ws.rs:jakarta.ws.rs-api:4.0.0"
+  implementation 'org.json:json:20251224'
+  implementation 'com.squareup.okhttp3:okhttp:5.3.2'
+  implementation 'com.google.code.gson:gson:2.13.2'
+  implementation 'com.fatboyindustrial.gson-javatime-serialisers:gson-javatime-serialisers:1.1.2'
+  implementation 'org.springframework.boot:spring-boot-starter-web:4.0.3'
+  implementation 'jakarta.servlet:jakarta.servlet-api:6.1.0'
+  implementation 'jakarta.ws.rs:jakarta.ws.rs-api:4.0.0'
+
+  googleJavaFormat 'com.google.googlejavaformat:google-java-format:1.34.1'
+}
+
+tasks.register('format', JavaExec) {
+  group = 'format'
+  description = 'Format code'
+  classpath = configurations.googleJavaFormat
+  mainClass = 'com.google.googlejavaformat.java.Main'
+
+  def sources = fileTree(dir: 'src', include: '**/*.java')
+  args = ['-i'] + sources
+
+  inputs.files(sources)
+  outputs.files(sources)
+
+  jvmArgs(
+    '--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
+    '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+    '--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
+    '--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
+    '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+    '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
+  )
+}
+
+tasks.withType(JavaCompile) {
+  options.compilerArgs << '-Xlint:deprecation'
 }
